# rustybrain

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  Makefile  README.md
data/: games.xml
ffi/: Cargo.toml  build.rs
ffi/src/: lib.rs
gbrain/: Cargo.toml
gbrain/src/: app.rs  lib.rs  main.rs
libgbrainy/: Cargo.toml
libgbrainy/src/: lib.rs
libgbrainy/src/engine/: context.rs  game.rs  manager.rs  mod.rs  utils.rs
libgbrainy/src/models/: analogy.rs  game.rs  mod.rs  shared.rs
libgbrainy/src/reader/: mod.rs
mobile/: pubspec.yaml
mobile/lib/: game_object.dart  generated_bindings.dart  main.dart  mainn.dart  question.dart  rustybrain_object.dart  utils.dart
mobile/lib/question/: ffi.dart  question_interface.dart  web.dart
mobile/web/: index.html
rustybrain/: Cargo.toml
rustybrain/src/: data.rs  main.rs
wasm/: Cargo.toml  pubspec.yaml
wasm/example/: pubspec.yaml
wasm/example/lib/: main.dart
wasm/lib/: rustybrain.dart
wasm/lib/src/: flutter_web_wasm_base.dart
wasm/src/: lib.rs
