[package]
name = "libgbrainy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.22.0", features = [ "serialize" ] }
serde = { version = "1.0.130", features = ["derive"] }
serde_derive = "1.0.130"
serde-xml-rs = "0.5.1"
Boa = "0.13.0"
regex = "1.5.4"
log = "0.4"
rand = "0.8.4"
serde_json = "1.0.68"
string-builder = "0.2.0"