[package]
name = "librustybrain-wasm"
version = "0.1.6"
authors = ["Sach97 <sacha.arbonel@hotmail.fr>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.78"
libgbrainy = { path = "../libgbrainy" }
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
lazy_static = "1.4.0"

[dependencies.web-sys]
version = "0.3.55"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.28"

#[profile.release]
## Tell `rustc` to optimize for small code size.
#opt-level = "s"
